kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: siyuan
spec:
  selector:
    app: siyuan
  ports:
  - port: 6806
    targetPort: 6806
  type: ClusterIP
